--- a/secapp/templates/partials/_sidebar.html
+++ b/secapp/templates/partials/_sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar pe-4 pb-3" id="mySidebar">
     <nav class="navbar bg-secondary navbar-dark">
         <a href="/" class="navbar-brand mx-4 mb-3">
-            <h3 class="text-primary"><i class="fa fa-user-secret me-2 " aria-hidden="true"></i>DarkPan</h3>
+            <h3 class="text-primary"><i class="fa fa-user-secret me-2" aria-hidden="true"></i>DarkPan</h3>
         </a>
         <div class="d-flex align-items-center ms-4 mb-4">
             <!-- <div class="position-relative">
@@ -31,7 +31,7 @@
             <a href="/settings" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Settings</a>
             <a href="/news" class="nav-item nav-link"><i class="fa fa-link me-2"></i>Security News</a>
             <a href="/todo" class="nav-item nav-link"><i class="fa fa-list me-2"></i>To Do </a>
-            <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>File Watchdog</a> -->
+            <a href="/port_scanner" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Port Scan</a>
             <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Virus Total</a> -->
             <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-bell me-2"></i>About DarkPan</a> -->
             <!-- <a href="/databreach" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Data Breach</a> -->
@@ -48,12 +48,3 @@
     </nav>
 </div>
 <!-- Sidebar End -->
-
-<script>
-    // document.addEventListener("DOMContentLoaded", function () {
-    //     document.querySelector('.sidebar-toggler').addEventListener('click', function (event) {
-    //         event.preventDefault();
-    //         document.querySelector('#mySidebar').classList.toggle('active');
-    //     });
-    // });
-</script>
